<resources>
    <string name="app_name">Iced.in</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="register">Don\'t have an account ? <font color="@colors/colorLoginRegister">Register</font></string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
