<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bckground_curved"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="131dp"
            android:layout_height="128dp"
            android:src="@drawable/ice_cube"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

        <TextView
            android:id="@+id/login_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.01999998" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <EditText
            android:id="@+id/login_form_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_rounded_corner"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:layout_margin="50dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription"
            app:layout_constraintBottom_toBottomOf="@+id/login_form_email"
            app:layout_constraintEnd_toEndOf="@+id/login_form_email"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="@+id/login_form_email"
            app:layout_constraintTop_toTopOf="@+id/login_form_email"
            app:srcCompat="@drawable/loginpage_email" />

        <EditText
            android:id="@+id/login_form_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/form_rounded_corner"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingStart="50dp"
            android:paddingTop="12dp"
            android:paddingEnd="50dp"
            android:paddingBottom="12dp"
            app:layout_constraintEnd_toEndOf="@+id/login_form_email"
            app:layout_constraintStart_toStartOf="@+id/login_form_email"
            app:layout_constraintTop_toBottomOf="@+id/login_form_email" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription"
            app:layout_constraintBottom_toBottomOf="@+id/login_form_password"
            app:layout_constraintEnd_toEndOf="@+id/image_email"
            app:layout_constraintTop_toTopOf="@+id/login_form_password"
            app:srcCompat="@drawable/loginpage_password" />

        <TextView
            android:id="@+id/login_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="true"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="@+id/login_form_password"
            app:layout_constraintTop_toBottomOf="@+id/login_form_password" />

        <Button
            android:id="@+id/my_rounded_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_curved"
            android:padding="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_form_password"
            app:layout_constraintVertical_bias="0.41000003"
            tools:layout_editor_absoluteX="50dp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColorLink="@color/colorLoginRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_rounded_sign_in_button"
            app:layout_constraintVertical_bias="0.84000003" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
